crates/obj-rs/tests/derive_compile_fail/empty_collection.stderr
error: collection name must not be empty
 --> tests/derive_compile_fail/empty_collection.rs:4:20
  |
4 | #[obj(collection = "")]
  |                    ^^
