crates/obj-rs/tests/derive_compile_fail/empty_collection.rs
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, obj::Document)]
#[obj(collection = "")]
struct EmptyCollection {
    x: u32,
}

fn main() {}
